// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-t8lkk2-0 bqcBCi"
  data-testid="header-bg"
>
  <div
    class="header__Container-t8lkk2-2 coAWuZ"
  >
    <p
      class="header__Link-t8lkk2-4 gVQqwK"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-t8lkk2-2 coAWuZ"
>
  <p
    class="header__Link-t8lkk2-4 epUlYa"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-t8lkk2-0 joKECs"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-t8lkk2-2 coAWuZ"
  >
    <div
      class="header__Group-t8lkk2-1 jISMBf"
    >
      <p
        class="header__Link-t8lkk2-4 epUlYa"
      >
        Series
      </p>
      <p
        class="header__Link-t8lkk2-4 epUlYa"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-t8lkk2-1 jISMBf"
    >
      <div
        class="header__Search-t8lkk2-7 fWTRcz"
      >
        <button
          class="header__SearchIcon-t8lkk2-8 jnjWaq"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-t8lkk2-6 kuPLOt"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-t8lkk2-9 enjTwY"
      >
        <button
          class="header__Picture-t8lkk2-3 bkgPzi"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-t8lkk2-5 kZIAxa"
        >
          <div
            class="header__Group-t8lkk2-1 jISMBf"
          >
            <button
              class="header__Picture-t8lkk2-3 bkgPzi"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-t8lkk2-4 epUlYa"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-t8lkk2-1 jISMBf"
          >
            <p
              class="header__Link-t8lkk2-4 epUlYa"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-t8lkk2-2 header__Feature-t8lkk2-12 coAWuZ bLnABX"
  >
    <h2
      class="header__FeatureCallOut-t8lkk2-14 dbzauk"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-t8lkk2-13 bljSXu"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-t8lkk2-15 hkLPZj"
    >
      Play
    </button>
  </div>
</div>
`;
